--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -38,6 +38,17 @@
         android:textColor="@color/yellow"
         android:textSize="28sp"
         tools:visibility="visible" />
+    
+    <Button
+        android:id="@+id/copyUrlButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/statustextView"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/yellow"
+        android:textSize="28sp"
+        android:text="@string/copyUrl"
+        />
 
     <RelativeLayout
         android:id="@+id/voiceAssistantLayout"
