--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -63,24 +63,29 @@
         android:focusable="auto"
         android:focusableInTouchMode="true">
 
-        <ImageView
-            android:id="@+id/microphoneIcon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:alpha="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:scaleType="centerCrop"
-            android:visibility="visible" />
+    <TextView
+        android:id="@+id/promptAvailableSpaceView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
+        android:layout_centerVertical="true"
+        android:textColor="@color/yellow"
+        android:textSize="28sp"
+        android:text="@string/availableSpace"
+        tools:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/hitApplicationIcon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_toRightOf="@id/microphoneIcon"
-            android:alpha="1"
-            android:scaleType="centerCrop"
-            android:visibility="invisible" />
+    <TextView
+        android:id="@+id/availableSpaceView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/promptAvailableSpaceView"
+        android:textColor="@color/yellow"
+        android:textSize="28sp"
+        tools:visibility="visible" />
     </RelativeLayout>
 
 
