--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -4,8 +4,9 @@
   android:layout_height="match_parent" android:animateLayoutChanges="false" tools:context=".LauncherActivity" android:id="@+id/launcher_activity" >
   <ImageView android:id="@+id/wallpaper" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.88" android:clickable="true"
     android:focusable="true" android:scaleType="centerCrop" android:src="@drawable/t3848215259" android:visibility="visible" />
-  <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.2" android:background="@android:color/black"
+  <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.4" android:background="@android:color/black"
     tools:visibility="visible" />
+  <CheckBox android:id="@+id/allowUnsafeDeletei" android:text="@string/allowUnsafeDeletei" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/statustextView" android:checked="true" />
   <TextView android:id="@+id/statustextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
     android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow" android:textSize="28sp"
     tools:visibility="visible" />
@@ -14,11 +15,11 @@
   <RelativeLayout android:id="@+id/voiceAssistantLayout" android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:layout_alignParentBottom="true" android:layout_marginLeft="48dp" android:layout_marginBottom="48dp" android:alwaysDrawnWithCache="false"
     android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
-  <TextView android:id="@+id/promptAvailableSpaceView" android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:layout_alignParentStart="false" android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow"
-    android:textSize="28sp" android:text="@string/availableSpace" tools:visibility="visible" />
-  <TextView android:id="@+id/availableSpaceView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
-    android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:layout_toRightOf="@id/promptAvailableSpaceView"
-    android:textColor="@color/yellow" android:textSize="28sp" tools:visibility="visible" />
+    <TextView android:id="@+id/promptAvailableSpaceView" android:layout_width="wrap_content" android:layout_height="wrap_content"
+      android:layout_alignParentStart="false" android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow"
+      android:textSize="28sp" android:text="@string/availableSpace" tools:visibility="visible" />
+    <TextView android:id="@+id/availableSpaceView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
+      android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:layout_toRightOf="@id/promptAvailableSpaceView"
+      android:textColor="@color/yellow" android:textSize="28sp" tools:visibility="visible" />
   </RelativeLayout>
 </RelativeLayout>
