--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -6,12 +6,46 @@
     android:focusable="true" android:scaleType="centerCrop" android:src="@drawable/t3848215259" android:visibility="visible" />
   <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.4" android:background="@android:color/black"
     tools:visibility="visible" />
+  <CheckBox android:id="@+id/allowAnonymousetei" android:text="@string/allowAnonymousetei" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/allowUnsafeDeletei" android:checked="true" />
   <CheckBox android:id="@+id/allowUnsafeDeletei" android:text="@string/allowUnsafeDeletei" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/statustextView" android:checked="true" />
   <TextView android:id="@+id/statustextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
     android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow" android:textSize="28sp"
     tools:visibility="visible" />
   <Button android:id="@+id/copyUrlButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/statustextView"
     android:layout_centerHorizontal="true" android:textColor="@color/yellow" android:textSize="28sp" android:text="@string/copyUrl" />
+  <RelativeLayout android:id="@+id/userNamePassWordayout" android:layout_width="wrap_content" android:layout_height="wrap_content"
+     android:layout_marginLeft="48dp"  android:alwaysDrawnWithCache="false"  android:layout_below="@id/copyUrlButton"
+    android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
+  <RelativeLayout android:id="@+id/userNameout" android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:alwaysDrawnWithCache="false"  android:layout_below="@id/copyUrlButton"
+    android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
+    <TextView android:id="@+id/userNameView" android:layout_width="wrap_content" android:layout_height="wrap_content"
+      android:layout_alignParentStart="false" android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow"
+      android:textSize="28sp" 
+      android:text="@string/userNamee" 
+      tools:visibility="visible" />
+    <TextView android:id="@+id/passWordiew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
+      android:layout_alignParentLeft="false" android:layout_centerVertical="true" 
+      android:layout_toRightOf="@id/userNameView"
+      android:text="@string/stupidbeautypace" 
+      android:textSize="28sp" tools:visibility="visible" />
+  </RelativeLayout>
+  <RelativeLayout android:id="@+id/PassWordayout" android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:alwaysDrawnWithCache="false"  
+    android:layout_below="@id/userNameout"
+    android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
+    <TextView android:id="@+id/userNameView" android:layout_width="wrap_content" android:layout_height="wrap_content"
+      android:layout_alignParentStart="false" android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow"
+      android:textSize="28sp" 
+      android:text="@string/passWorde" 
+      tools:visibility="visible" />
+    <TextView android:id="@+id/passWordiew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
+      android:layout_alignParentLeft="false" android:layout_centerVertical="true" 
+      android:layout_toRightOf="@id/userNameView"
+      android:text="@string/ftpserverw" 
+      android:textSize="28sp" tools:visibility="visible" />
+  </RelativeLayout>
+  </RelativeLayout>
   <RelativeLayout android:id="@+id/voiceAssistantLayout" android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:layout_alignParentBottom="true" android:layout_marginLeft="48dp" android:layout_marginBottom="48dp" android:alwaysDrawnWithCache="false"
     android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
