--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -17,14 +17,14 @@
      android:layout_marginLeft="48dp"  android:alwaysDrawnWithCache="false"  android:layout_below="@id/copyUrlButton"
     android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
   <RelativeLayout android:id="@+id/userNameout" android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:alwaysDrawnWithCache="false"  android:layout_below="@id/copyUrlButton"
+    android:alwaysDrawnWithCache="false"  
     android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
     <TextView android:id="@+id/userNameView" android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_alignParentStart="false" android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow"
       android:textSize="28sp" 
       android:text="@string/userNamee" 
       tools:visibility="visible" />
-    <TextView android:id="@+id/passWordiew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
+    <TextView android:id="@+id/userNameContentpassWordiew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
       android:layout_alignParentLeft="false" android:layout_centerVertical="true" 
       android:layout_toRightOf="@id/userNameView"
       android:text="@string/stupidbeautypace" 
@@ -34,14 +34,14 @@
     android:alwaysDrawnWithCache="false"  
     android:layout_below="@id/userNameout"
     android:animateLayoutChanges="true" android:clickable="true" android:focusable="auto" android:focusableInTouchMode="true">
-    <TextView android:id="@+id/userNameView" android:layout_width="wrap_content" android:layout_height="wrap_content"
+    <TextView android:id="@+id/passworduserNameView" android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_alignParentStart="false" android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:textColor="@color/yellow"
       android:textSize="28sp" 
       android:text="@string/passWorde" 
       tools:visibility="visible" />
     <TextView android:id="@+id/passWordiew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
       android:layout_alignParentLeft="false" android:layout_centerVertical="true" 
-      android:layout_toRightOf="@id/userNameView"
+      android:layout_toRightOf="@id/passworduserNameView"
       android:text="@string/ftpserverw" 
       android:textSize="28sp" tools:visibility="visible" />
   </RelativeLayout>
