--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -106,6 +106,8 @@
       android:textSize="28sp" android:text="@string/availableSpace" tools:visibility="visible" />
     <TextView android:id="@+id/availableSpaceView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="false"
       android:layout_alignParentLeft="false" android:layout_centerVertical="true" android:layout_toRightOf="@id/promptAvailableSpaceView"
-      android:textColor="@color/yellow" android:textSize="28sp" tools:visibility="visible" />
+      android:textColor="@color/yellow"
+      android:textSize="28sp" tools:visibility="visible" 
+    />
   </RelativeLayout>
 </RelativeLayout>
