work around dolphin bug 474238

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical"
-                android:padding="0dp">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="0dp">
 
-  <ImageView android:id="@+id/wallpaper" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.88" android:clickable="true"
-    android:contentDescription="@string/backgroundImage" android:focusable="true" android:scaleType="centerCrop" 
-    android:src="@drawable/dovi14wuwaai7j81080"
-    android:visibility="visible"
-    />
-  <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.4" android:background="@android:color/black"
-    android:contentDescription="@string/darkBackgroundImage" />
+    <ImageView
+        android:id="@+id/wallpaper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.88"
+        android:clickable="true"
+        android:contentDescription="@string/backgroundImage"
+        android:focusable="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/dovi14wuwaai7j81080"
+        android:visibility="visible" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.4"
+        android:background="@android:color/black"
+        android:contentDescription="@string/darkBackgroundImage" />
+
     <Button
         android:id="@+id/lanime_button1"
         android:layout_width="wrap_content"
@@ -36,8 +47,8 @@
         android:src="@drawable/shape"
         android:text="@string/applicationFrequency"
         android:textColor="@android:color/white"
-      android:visibility="invisible"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/appAliasbutton1"
@@ -51,8 +62,8 @@
         android:src="@drawable/shape"
         android:text="@string/applicationAlias"
         android:textColor="@android:color/white"
-      android:visibility="invisible"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/myAccountbutton1"
@@ -66,7 +77,7 @@
         android:src="@drawable/shape"
         android:text="@string/setRootDirectoryunt"
         android:textColor="@android:color/white"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/ratelanime_button1"
@@ -80,6 +91,17 @@
         android:src="@drawable/shape"
         android:text="@string/rateUs"
         android:textColor="@android:color/white"
-      android:visibility="invisible"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:visibility="invisible" />
+
+    <!-- 新增的复选框 -->
+    <CheckBox
+        android:id="@+id/check_dolphinbug474238_placeholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ratelanime_button1"
+        android:layout_marginTop="20dp"
+        android:text="@string/dolphinbug474238_workaround_label"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 </RelativeLayout>
